managed/apps/ai/components/discovery/overlays/dev/patches/deploy-discovery-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-api
  namespace: ai
spec:
  template:
    spec:
      containers:
        - name: api
          image: gcr.io/tf-ops-cicd-97aadd/ai/discovery/dev/api:latest
