managed/apps/ai/components/discovery/overlays/dev/patches/deploy-discovery-static.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-static
  namespace: ai
spec:
  template:
    spec:
      containers:
        - name: static
          image: gcr.io/tf-ops-cicd-97aadd/ai/discovery/dev/static:latest
