managed/apps/ai/components/discovery/overlays/dev/patches/ingress-discovery.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: discovery
  namespace: ai
spec:
  tls:
  - hosts:
    - huberchat.dev.ai.galarza.business
    secretName: discovery-tls
  rules:
  - host: huberchat.dev.ai.galarza.business
    http:
      paths: 
        - path: /
          pathType: Prefix
          backend:
            service:
              name: discovery-static-webserver
              port:
                number: 80
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: discovery-api-api
              port:
                number: 8080
